# translit

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  COMPETITIVE_ANALYSIS.md  DESIGN.md  Dockerfile  INTERNALS.md  LICENSE  README.md  SLA.md  TENETS.md  WORK_DONE.md  fly.toml  pyproject.toml  requirements.txt  takumi-pkg.yaml  takumi.yaml
.takumi/: TAKUMI.md
app/: auth.py  cache.py  config.py  errors.py  logs.py  main.py  models.py  routes.py  transliterate.py
demo/: index.html
docs/: INTERNALS.md  WORK_DONE.md  index.html
migrations/: 001_init.sql
tests/: conftest.py  test_ar_to_latin.py  test_auth.py  test_cache.py  test_edge_cases.py  test_en_to_katakana.py  test_engine_api.py  test_hi_to_latin.py  test_http_api.py  test_ja_honorifics.py  test_ja_romanization.py  test_ko_to_roman.py  test_ru_to_latin.py  test_script_detection.py  test_th_to_latin.py
translit_core/: __init__.py  engine.py
